# personal-finance-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  pyproject.toml
.githooks/: pre-commit
apps/categories/: models.py  serializers.py  urls.py  views.py
apps/categories/migrations/: 0001_initial.py
apps/categories/tests/: test_categories.py
apps/core/: urls.py  views.py
apps/core/tests/: test_cors.py  test_health.py  test_openapi.py
apps/reports/: services.py  urls.py  views.py
apps/reports/tests/: test_reports.py
apps/transactions/: models.py  serializers.py  urls.py  views.py
apps/transactions/migrations/: 0001_initial.py
apps/transactions/tests/: test_transactions.py
apps/wallets/: models.py  serializers.py  urls.py  views.py
apps/wallets/migrations/: 0001_initial.py
apps/wallets/tests/: test_wallets.py
config/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_auth.py
